--- a/index.html
+++ b/index.html
@@ -32,48 +32,134 @@
       </tr>
       <tr>
         <th>Dissolved Oxygen (mg/l)</th>
-        <td id="DO"></td>
+        <td id="DO">7.774051</td>
       </tr>
       <tr>
         <th>Nitrate (mg/l)</th>
-        <td id="Nitrate"></td>
+        <td id="Nitrate">-</td>
       </tr>
       <tr>
         <th>Sulphate (mg/l)</th>
-        <td id="Sulphate"></td>
+        <td id="Sulphate">-</td>
       </tr>
       <tr>
         <th>pH</th>
-        <td id="pH"></td>
+        <td id="pH">7.626185</td>
       </tr>
       <tr>
         <th>Phosphate (mg/l)</th>
-        <td id="Phosphate"></td>
+        <td id="Phosphate">-</td>
       </tr>
       <tr>
         <th>Biochemical Oxygen Demand (mg/l)</th>
-        <td id="BOD"></td>
+        <td id="BOD">1.709079</td>
       </tr>
       <tr>
-        <th>Fecal Chloroform (MPN/100ml)</th>
+        <!-- <th>Fecal Chloroform (MPN/100ml)</th>
         <td id="FC"></td>
+      </tr> -->
+      <tr>
+        <th>Total Chloroform (MPN/100ml)</th>
+        <td id="FC">138.741688</td>
       </tr>
       <tr>
         <th>Hardness (mg/l)</th>
-        <td id="Hardness"></td>
+        <td id="Hardness">84.985507</td>
       </tr>
-      <tr>
+      <!-- <tr>
         <th>Precipitation (%)</th>
         <td id="Precipitation"></td>
       </tr>
       <tr>
         <th>Temperature (°C)</th>
         <td id="Temp"></td>
-      </tr>
+      </tr> -->
       </table>
     </div>
     <div id="map"></div>
     </div>
+    <br><br>
+    <div id="Predict">
+      <table class="styled2">
+        <tr>
+          <th>PARAMETERS</th>
+          <th>Day 1</th>
+          <th>Day 2</th>
+          <th>Day 3</th>
+          <th>Day 4</th>
+        </tr>
+        <tr>
+          <th>Dissolved Oxygen (mg/l)</th>
+          <td id="DO1">7.698317</td>
+          <td id="DO2">7.731271</td>
+          <td id="DO3">7.716932</td>
+          <td id="DO4">7.723171</td>
+        </tr>
+        <tr>
+          <th>Nitrate (mg/l)</th>
+          <td id="Nitrate1">-</td>
+          <td id="Nitrate2">-</td>
+          <td id="Nitrate3">-</td>
+          <td id="Nitrate4">-</td>
+        </tr>
+        <tr>
+          <th>Sulphate (mg/l)</th>
+          <td id="Sulphate1">-</td>
+          <td id="Sulphate2">-</td>
+          <td id="Sulphate3">-</td>
+          <td id="Sulphate4">-</td>
+        </tr>
+        <tr>
+          <th>pH</th>
+          <td id="pH1">7.738249</td>
+          <td id="pH2">7.763059</td>
+          <td id="pH3">7.768552</td>
+          <td id="pH4">7.769768</td>
+        </tr>
+        <tr>
+          <th>Phosphate (mg/l)</th>
+          <td id="Phosphate1">-</td>
+          <td id="Phosphate2">-</td>
+          <td id="Phosphate3">-</td>
+          <td id="Phosphate4">-</td>
+        </tr>
+        <tr>
+          <th>Biochemical Oxygen Demand (mg/l)</th>
+          <td id="BOD1">1.175750</td>
+          <td id="BOD2">0.914817</td>
+          <td id="BOD3">0.635627</td>
+          <td id="BOD4">0.531197</td>
+        </tr>
+        <tr>
+          <th>Total Chloroform (MPN/100ml)</th>
+          <td id="FC1">122.760044</td>
+          <td id="FC2">121.036328</td>
+          <td id="FC3">107.644045</td>
+          <td id="FC4">97.662443</td>
+        </tr>
+        <tr>
+          <th>Hardness (mg/l)</th>
+          <td id="Hardness1">100.570358</td>
+          <td id="Hardness2">86.986643</td>
+          <td id="Hardness3">91.022949</td>
+          <td id="Hardness4">95.703905</td>
+        </tr>
+        <!-- <tr>
+          <th>Precipitation (%)</th>
+          <td id="Precipitation1"></td>
+          <td id="Precipitation2"></td>
+          <td id="Precipitation3"></td>
+          <td id="Precipitation4"></td>
+        </tr>
+        <tr>
+          <th>Temperature (°C)</th>
+          <td id="Temp1"></td>
+          <td id="Temp2"></td>
+          <td id="Temp3"></td>
+          <td id="Temp4"></td>
+        </tr> -->
+      </table>
+    </div>    
     <div class="footer"></div>
   <script src="main.js"></script>
   </body>
